Change Id to ID

--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -170,7 +170,7 @@ tfoot input {
 								<tr id='attrRow2'>
 									<th class="column-heading" id='colheading001'></th>
 									<th class="column-heading" id='colheading001' th:text="'User ID'"></th>
-									<th class="column-heading" id='colheading002' th:text="'Task Id'"></th>
+									<th class="column-heading" id='colheading002' th:text="'Task ID'"></th>
 									<th class="column-heading" id='colheading003' th:text="'Path'"></th>
 									<th class="column-heading" id='colheading004' th:text="'Type'"></th>
 									<th class="column-heading" id='colheading005' th:text="'Destination Type'"></th>
@@ -200,7 +200,7 @@ tfoot input {
 								<tr id='attrFooter2'>
 									<th id='colf1'></th>
 									<th class="column-heading" id='colfoot001' th:text="'User ID'"></th>
-									<th class="column-heading" id='colfoot002' th:text="'Task Id'"></th>
+									<th class="column-heading" id='colfoot002' th:text="'Task ID'"></th>
 									<th class="column-heading" id='colfoot003' th:text="'Path'"></th>
 									<th class="column-heading" id='colfoot004' th:text="'Type'"></th>
 									<th class="column-heading" id='colfoot005' th:text="'Destination Type'"></th>
