--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -148,7 +148,7 @@
 									<thead>
 										<tr id='attrRow2'>
 											<th class="column-heading" id='colheading001' th:text="'User ID'"></th>
-											<th class="column-heading" id='colheading002' th:text="'Task Id'"></th>
+											<th class="column-heading" id='colheading002' th:text="'Task ID'"></th>
 											<th class="column-heading" id='colheading004' th:text="'Source Type'"></th>
 											<th class="column-heading" id='colheading008' th:text="'Transfer Result'"></th>
 											<th class="column-heading" id='colheading006' th:text="'Created On'"></th>
@@ -169,7 +169,7 @@
 									<tfoot>
 										<tr id='attrFooter2'>
 											<td class="column-heading" id='colfoot001' th:text="'User ID'"></td>
-											<td class="column-heading" id='colfoot002' th:text="'Task Id'"></td>
+											<td class="column-heading" id='colfoot002' th:text="'Task ID'"></td>
 											<td class="column-heading" id='colfoot004' th:text="'Source Type'"></td>
 											<td class="column-heading" id='colfoot008' th:text="'Transfer Result'"></td>
 											<td class="column-heading" id='colfoot006' th:text="'Created On'"></td>
