--- a/src/hpc-web/src/main/resources/templates/viewdatafile.html
+++ b/src/hpc-web/src/main/resources/templates/viewdatafile.html
@@ -58,6 +58,7 @@
     var attributeNames = [[${attributeNames}]];
 /*]]>*/
 </script>
+
 <style>
 /*style.css*/
 .gridStyle {
@@ -78,31 +79,43 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<h4>
-							<i class="fa fa-folder"></i> View Collection
+							<i class="fa fa-folder"></i> Data File
 						</h4>
 					</div>
 				</div>
 				<!--Title End-->
 				<!--Row start-->
-			<div class="row">
-			 <div class="col-lg-9 col-md-12">
-			  <div class="panel panel-default">
-				  <div id="errorsFeedback" style="word-break: break-all;">
-					<div class="alert alert-error" th:if="${error != null}">
-						<a class="close" data-dismiss="alert">×</a> <label
-								for="${error}" th:text="${error}"></label>
-					</div>
-				  </div>
+				<div class="row">
+							<div class="pull-left col-lg-9 col-md-12" id="deletemessage"
+								style="display: none; float: left">
+								<p>&nbsp;</p>
+							</div>
+							<div class="pull-left col-lg-9 col-md-12" id="deletewait"
+								style="display: none; float: left">
+								<p>&nbsp;</p>
+							</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-9 col-md-12">
+						<div class="panel panel-default">
+							<div th:if="${error != null}" style="word-break: break-all;">
+								<div class="alert alert-error">
+									<a class="close" data-dismiss="alert">×</a> <label
+										for="${error}" th:text="${error}"></label>
+								</div>
+							</div>
 								<!--panel-body start-->
-								<div class="panel-body"  th:if="${collection != null}">
-								<div class="modal fade" id="downloadModal" tabindex="-1" role="dialog"
-									aria-labelledby="myModalLabel" aria-hidden="true">
-									<div class="modal-dialog">
+								<div class="panel-body" th:if="${hpcDatafile != null}">
+								    <div class="modal fade" id="downloadModal" tabindex="-1" role="dialog"
+									  aria-labelledby="myModalLabel" aria-hidden="true">
+									  <div class="modal-dialog">
 										<div class="modal-content"></div>
 										<!-- /.modal-content -->
-									</div>
-									<!-- /.modal-dialog -->
-								</div>								
+									  </div>
+									  <!-- /.modal-dialog -->
+								    </div>	
+																
+								
 									<div class="modal fade" id="createBookmarksTarget" tabindex="-1" role="dialog"
 										aria-labelledby="browsePartialLabel" aria-hidden="true">
 										<div class="modal-dialog">
@@ -110,96 +123,106 @@
 											<!-- /.modal-content -->
 										</div>
 										<!-- /.modal-dialog -->
-									</div>
-                                    <div class="form-group" style="word-break: break-all;">
+									</div>								
+								
+									<div class="form-group" style="word-break: break-all;">
 										<div class="col-md-12 form-group">
 											<label for="Name">Path:</label> <label id="pathLabel"
-												for="${collection.getCollection().getCollectionName()}"
-												th:text="${collection.getCollection().getCollectionName()}"></label>
+												for="${hpcDatafile.getDataObject().getAbsolutePath()}"
+												th:text="${hpcDatafile.getDataObject().getAbsolutePath()}"></label>
 											<button class="copy-btn" data-toggle="tooltip" data-placement="bottom" title="Copy to clipboard" data-clipboard-target="#pathLabel">
 											    <img src="img/clippy.svg" width="13" alt="Copy to clipboard"/>
 											</button>
 										</div>
 										<div class="col-md-12 form-group">
-											<label for="Name">Parent Name:</label> <label
-												for="${collection.getCollection().getCollectionParentName()}"
-												th:text="${collection.getCollection().getCollectionParentName()}"></label>
+											<label for="Name">Collection Name:</label> <label
+												for="${hpcDatafile.getDataObject().getCollectionName()}"
+												th:text="${hpcDatafile.getDataObject().getCollectionName()}"></label>
 										</div>
-										<div class="col-md-12 form-group" th:if="${collectionSize != null}">
-											<label for="Name">Collection Size:</label> <label
-												for="${collectionSize}"
-												th:text="${collectionSize}"></label>
+										<div class="col-md-12 form-group" th:if="${datafileSize != null}">
+											<label for="Name">File Size:</label> <label
+												for="${datafileSize}"
+												th:text="${datafileSize}"></label>
 										</div>
 									</div>
 								</div>
+								
+								
 								<div class="panel-heading">
 									<h2>
 										<i class="fa fa-list-alt red"></i><strong>User Metadata</strong>
 									</h2>
 								</div>
-								<div class="panel-body"  th:if="${collection != null}">
-								<form class="form-horizontal" id="collectionForm" th:action="@{/collection}"
-									th:object="${hpcCollection}" method="POST">
-
-								<div class="form-group" >
-									<table class="table table-bordered  col-md-12" id="metaAttrTable">
+								<div class="panel-body" th:if="${hpcDatafile != null}">
+								
+								<form class="form-horizontal" id="datafileForm" th:action="@{/datafile}"
+									th:object="${hpcDatafile}" method="POST">
+								
+								  <div class="form-group">
+									<table class="table table-bordered col-md-12" id="metaAttrTable">
 										<thead>
 											<tr>
-												<th class="col-md-2">Attribute Name</th>
-												<th class="col-md-4">Value</th>
+												<th>Attribute Name</th>
+												<th>Value</th>
 											</tr>
 										</thead>
-										<tbody th:if="${collection.getSelfMetadataEntries() != null}">					  										  
-										  <div th:if="${action != 'edit'}">
-										    <tr th:each="metadataItem : ${collection.getSelfMetadataEntries()}">
-											    <td><label th:text="${metadataItem.getAttrName()}"></label></td>
-											    <td th:if="${metadataItem.isEncrypted() == false}"><label for="${metadataItem.getAttrName()}"
-													th:text="${metadataItem.getAttrValue()}"></label></td>	
-												<td th:if="${metadataItem.isEncrypted() == true}"><input type="password" disabled="disabled"
-													th:for="${metadataItem.getAttrName()}"
-													autocomplete="secured" style="border: none;background-color: white;"
-													th:value="${metadataItem.getAttrValue()}"></input>
-												<button type="button"
-														th:id="'showButton'+${metadataItem.getAttrName()}"
-														class="btn btn-outline-secondary btn-sm showButton">Show</button></td>
-											</tr>
-										  </div>				  
+										<tbody th:if="${hpcDatafile.getSelfMetadataEntries() != null}">
+											<div th:if="${action != 'edit'}">
+											  <tr th:each="metadataItem : ${hpcDatafile.getSelfMetadataEntries()}">
+												<td><label th:text="${metadataItem.getAttrName()}"></label></td>
+												<td style="word-break: break-all;"><label for="${metadataItem.getAttrName()}"
+												  th:text="${metadataItem.getAttrValue()}"></label></td>
+											  </tr>
+											</div>
 										</tbody>
 									</table>
-								</div>
+								  </div>
+								</form>
+								<form class="form-horizontal" id="datafileDeleteForm" th:action="@{/datafile/delete}"
+									th:object="${hpcDatafile}">
+									<input type="hidden" name="deletepath" id="deletepath" th:value="${hpcDatafile.getDataObject().getAbsolutePath()}"/>
 								</form>
 								</div>
+	
 								<div class="panel-heading">
 									<h2>
 										<i class="fa fa-list-alt red"></i><strong>System Metadata</strong>
 									</h2>
 								</div>
-								<div class="form-group" th:if="${collection != null}">
-									<table class="table table-bordered  col-md-12" id="sysMetaAttrTable">
+								<div class="panel-body" th:if="${hpcDatafile != null}">
+								 
+								  <div class="form-group">
+									<table class="table table-bordered col-md-12" id="sysMetaAttrTable">
 										<thead>
 											<tr>
-												<th class="col-md-2">Attribute Name</th>
-												<th class="col-md-4">Value</th>
+												<th>Attribute Name</th>
+												<th>Value</th>
 											</tr>
 										</thead>
-										<tbody th:if="${collection.getSelfSystemMetadataEntries() != null}">
-										  <tr th:each="metadataItem : ${collection.getSelfSystemMetadataEntries()}">
-											<td><label th:text="${metadataItem.getAttrName()}"></label></td>
-											<td><label for="${metadataItem.getAttrName()}" 
-												  th:text="${metadataItem.getAttrValue()}"></label></td>									
-									      </tr>		
+										<tbody th:if="${hpcDatafile.getSelfSystemMetadataEntries() != null}">
+											<tr th:each="metadataItem : ${hpcDatafile.getSelfSystemMetadataEntries()}">
+												<td><label th:text="${metadataItem.getAttrName()}"></label>
+													<a id="checksumHelp" href="#" data-toggle="tooltip" data-html="true" data-placement="right" th:if="${metadataItem.getAttrName() == 'checksum'}">
+													<img style="width: 25px; height: 25px;" src="img/help.png"/></a></td>
+												<td style="word-break: break-all;"><label for="${metadataItem.getAttrName()}"
+												  th:text="${metadataItem.getAttrValue()}"></label></td>
+											</tr>
 										</tbody>
 									</table>
-								</div>		
-								<div class="panel-heading">
+								  </div>
+								</div>
+								
+								
+								<div class="panel-heading" th:if="${hpcDatafile != null}">
 									<h2>
 										<i class="fa fa-list-alt red"></i> <a class="btn link"
 											onClick="showParentAttrs()">Ancestor Metadata <span
 											class="menu-arrow arrow_carrot-right" id="arrow"></span>
 										</a>
+
 									</h2>
 								</div>
-								<div class="form-group" id="parentAttrs" style="display: none"  th:if="${collection != null}">
+								<div class="form-group" id="parentAttrs" style="display: none" th:if="${hpcDatafile != null}">
 									<table class="table table-bordered  col-md-12">
 										<thead>
 											<tr>
@@ -208,9 +231,9 @@
 												<th>Value</th>
 											</tr>
 										</thead>
-										<tbody th:if="${collection.getParentMetadataEntries() != null}">
+										<tbody th:if="${hpcDatafile.getParentMetadataEntries() != null}">
 											<tr
-												th:each="metadataItem : ${collection.getParentMetadataEntries()}">
+												th:each="metadataItem : ${hpcDatafile.getParentMetadataEntries()}">
 												<td><label th:text="${metadataItem.getLevelLabel()}"></label></td>
 												<td><label th:text="${metadataItem.getAttrName()}"></label></td>
 												<td><label for="${metadataItem.getAttrName()}"
@@ -218,11 +241,13 @@
 											</tr>
 										</tbody>
 									</table>
-								</div>
-							</div>
+								</div>								
+						</div>
 						<!--/col-->
+
 					</div>
 				</div>
+				<div class="row"></div>
 			</section>
 			<div th:include="footer :: footer"></div>
 		</section>
@@ -239,17 +264,18 @@
 	<script src="assets/jquery-knob/js/jquery.knob.js"></script>
 	<script src="js/jquery.sparkline.js" type="text/javascript"></script>
 	<script src="js/jquery.customSelect.min.js"></script>
-	
+
 	<!--custome script for all page-->
 	<script src="js/scripts.js"></script>
 	<script>
 		$(document).ready(function(){
+			$('#checksumHelp').prop("title", "Checksum can either be the MD5 digest or the entity tag (ETag). For multipart uploads the ETag is the MD5 hexdigest of each part's MD5 digest concatenated together, followed by the number of parts separated by a dash.");
   			$('[data-toggle="tooltip"]').tooltip();
 		});
 	</script>
 	<script type="text/javascript">
 	/*<![CDATA[*/
-
+	
 	$('.copy-btn').tooltip({
 	    trigger : 'hover'
 	});
@@ -261,14 +287,8 @@
 	    e.clearSelection();
 	});
 	
-	var rowId = 1;
-	
-	function cancelEdit()
-    {
-		document.getElementById("action").value = "cancel";
-		$("#collectionForm").submit();
-    }
-
+	var rowId = 1;	
+		
 	var toggle = true;
 	function showParentAttrs() {
 		var ele = document.getElementById("parentAttrs");
@@ -291,64 +311,18 @@
 			ele.style.display = "block";
 		}
 	}
-    
-    function decrypt() {
-    	
-    	var serviceUri = "/collection/show";
-        $.ajax({
-            type : "POST",
-            url : serviceUri,
-            data : $(".popover #keyForm").serialize(),
-			success : function(msg) {
-				if(msg.code=="success") {
-					var decrypted=msg.message;
-			    	var id = "#"+$(".popover #textId").val();
-			    	$(id).prev("input").replaceWith('<label>'+decrypted+'</label>');
-			    	$(id).addClass("hidden");
-				    $(id).click();
-				} else {
-					var errMsg='<div class="alert alert-error"><a class="close" data-dismiss="alert">×</a><label>'+msg.code+'</label></div>';
-					$("#errorsFeedback").html(errMsg);
-					
-					var id = "#"+$(".popover #textId").val();
-					$(id).click();
-				}
-			},
-			error : function(e) {
-				console.log('ERROR: ', e);
-				$('#message').html(e.message);
-			}
-        });
-    	
-    	
-    }
-    
-    $(document).ready(function () {
-    	$(".showButton").popover({
-   	        container: 'body',
-   	        placement:"right",
-   	        html: true,
-   	        content: function() {
-   	          return $("#keyPopover").html();
-   	        }
-   	    });
-    	$('body').on('click', '.showButton', function() {
-    		$(".popover #textString").val($(this).prev("input").val());
-    		$(".popover #textId").val(this.id);
-    	});
-    	$('body').on('keypress', '#keyForm', function(e) {
-    		//Enter key
-    		if (e.which == 13) {
-    			decrypt();
-    			return false;
-    		} 
-      	});
-    	$('body').on('click', '.deleteAttribute', function() {
-    		$(this).closest("tr").find("input").val("");
-    		$(this).closest("tr").addClass("hidden");
-    	});
-    });
-
+	
+	
+	$(function() {
+		//twitter bootstrap script
+		$('#bookmarksForm').on('close', function(e) {
+			$('#myModal-event').modal('hide');
+		});
+	});	
+	$('body').on('click', '.deleteAttribute', function() {
+		$(this).closest("tr").find("input").val("");
+		$(this).closest("tr").addClass("hidden");
+	});
 	/*]]>*/
 </script>
 
