HPCDATAMGM-1896: Remove grey space around expand-all icon

--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -321,7 +321,7 @@ tfoot input {
 			            }
 			        } );
 		        } else {
-					$(this).html( '<div id="expandcollapseId"><button id="btn-show-all-doc" style="border:none;" title="Click to expand details of all rows"><img width="24" height="24" background-color="white" class="imgDetails" src="img/details_open.png"/></button></div>');
+					$(this).html( '<div id="expandcollapseId"><img width="24" height="24" background-color="white" class="imgDetails" src="img/details_open.png" title="Click to expand details of all rows" /></div>');
 		        }
 		    } );
 
